feat(MongoDB): :sparkles: Get - Alquiler
Se soluciona problema presentado al momento de consultar los alquileres :)

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SERVER={"hostname":"127.0.0.1", "port":5015}
+MY_SERVER={"hostname":"127.0.0.1", "port":5015}
 ATLAS_USER="eduardoma876"
-ATLAS_PASSWORD="campus2023"
-ATLAS_DB="db_limit_mongo"
+ATLAS_PASSWORD="campus123"
+ATLAS_DB="db_campus_alquiler"
 JWT_PRIVATE_KEY="HolaMundo"
