--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "6.8.1",
     "jose": "4.14.4",
     "mongodb": "5.7.0",
+    "node": "20.5.0",
     "nodemon": "3.0.1",
     "reflect-metadata": "0.1.13",
     "typescript": "5.1.6"
