feat(MongoDB): :memo: Update readme
Se actualizo readme con informacion referente al proyecto

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MY_SERVER={"hostname":"127.0.0.1", "port":5015}
 ATLAS_USER="eduardoma876"
 ATLAS_PASSWORD="campus123"
-ATLAS_DB="db_campus_alquiler"
+ATLAS_DB="alquiler_campus"
 JWT_PRIVATE_KEY="HolaMundo"
